@@ -7,6 +7,7 @@ PHP                                                                        NEWS
 - Fixed memory corruptions while reading properties of zip files. (Ilia)
 - Fixed memory leak in ob_get_clean/ob_get_flush. (Christian)
 
+- Fixed bug #47845 (PDO_Firebird omits first row from query). (Lars W)
 - Fixed bug #47831 (Compile warning for strnlen() in main/spprintf.c).
   (Ilia, rainer dot jung at kippdata dot de)
 - Fixed bug #47828 (openssl_x509_parse() segfaults when a UTF-8 conversion
